--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,10 @@
-@import;
+@import "_nullstyle.scss"; // Outline в обнулении
+
+// !! АДАПТИВНЫЙ ШРИФТ
+
+$maxWidth: 1280;
+@mixin adaptiv-font($pcSize, $mobSize) {
+    $addSize: $pcSize - $mobSize;
+    $maxWidth: $maxWidth - 320;
+    font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
+}
