--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,28 @@ h6 {
 .main {
   min-height: 250px;
   background-color: #9fdbb1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main input {
+  width: 300px;
+  height: 50px;
+  padding-left: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .footer {
