--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,8 +18,28 @@ $maxWidth: 1280;
 .main {
     min-height: 250px;
     background-color: rgb(159, 219, 177);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    & input {
+        width: 300px;
+        height: 50px;
+        padding-left: 10px;
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
 }
+
 .footer {
     min-height: 250px;
     background-color: rgb(162, 107, 212);
+}
+
+.inputmovie {
+}
+.inputrating {
+}
+.input-num-movie {
 }
