--- a/css/style.css
+++ b/css/style.css
@@ -89,58 +89,25 @@ h6 {
 }
 
 /*--------------------*/
-.header {
-  min-height: 300px;
-  background-color: #e4acac;
-}
-
-.main {
-  min-height: 250px;
-  background-color: #9fdbb1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.main input {
-  width: 300px;
-  height: 50px;
-  padding-left: 10px;
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 20px;
-}
-
-.footer {
-  min-height: 250px;
-  background-color: #a26bd4;
-}
-
 .box {
-  width: 150px;
-  height: 150px;
-  background-color: red;
-  margin-bottom: 30px;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
+
+.wrapper {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  border: 3px solid red;
 }
 
 button {
-  width: 80px;
-  height: 30px;
+  margin-bottom: 10px;
   margin-top: 10px;
+  width: 100px;
+  height: 40px;
+  background-color: yellow;
   border: none;
-  border-radius: 8px;
-  color: black;
-  cursor: pointer;
-  outline: none;
-  margin-bottom: 30px;
 }
