--- a/css/style.css
+++ b/css/style.css
@@ -89,25 +89,61 @@ h6 {
 }
 
 /*--------------------*/
-.box {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  background-color: blue;
-}
-
 .wrapper {
-  position: relative;
   width: 400px;
-  height: 400px;
-  border: 3px solid red;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 50px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 button {
-  margin-bottom: 10px;
-  margin-top: 10px;
-  width: 100px;
-  height: 40px;
-  background-color: yellow;
-  border: none;
+  margin-bottom: 20px;
+  width: 250px;
+  height: 30px;
+  border-radius: 8px;
+  background-color: #70a1c8;
+  color: white;
+}
+
+[type="checkbox"] {
+  margin-top: 20px;
+}
+
+.form-signin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form-signin input {
+  border: 1px solid #000;
+  height: 30px;
+  width: 250px;
+  margin-bottom: 20px;
+}
+
+.form-signin-heading {
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 600;
 }
