--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,69 +9,43 @@ $maxWidth: 1280;
     font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
 }
 
-// .wrapper-x {
-// }
-// .header {
-//     min-height: 300px;
-//     background-color: rgb(228, 172, 172);
-// }
-// .main {
-//     min-height: 250px;
-//     background-color: rgb(159, 219, 177);
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     flex-direction: column;
-//     & input {
-//         width: 300px;
-//         height: 50px;
-//         padding-left: 10px;
-//         font-size: 18px;
-//         font-weight: 600;
-//         margin-bottom: 20px;
-//     }
-// }
-
-// .footer {
-//     min-height: 250px;
-//     background-color: rgb(162, 107, 212);
-// }
-
-// .box {
-//     width: 150px;
-//     height: 150px;
-//     background-color: red;
-//     margin-bottom: 30px;
-// }
-// button {
-//     width: 80px;
-//     height: 30px;
-//     margin-top: 10px;
-//     border: none;
-//     border-radius: 8px;
-//     color: black;
-//     cursor: pointer;
-//     outline: none;
-//     margin-bottom: 30px;
-// }
-
-.box {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: blue;
-}
 .wrapper {
-    position: relative;
     width: 400px;
-    height: 400px;
-    border: 3px solid red;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin: 50px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+
 button {
-    margin-bottom: 10px;
-    margin-top: 10px;
-    width: 100px;
-    height: 40px;
-    background-color: yellow;
-    border: none;
+    margin-bottom: 20px;
+    width: 250px;
+    height: 30px;
+    border-radius: 8px;
+    background-color: rgb(112, 161, 200);
+    color: white;
+}
+
+[type="checkbox"] {
+    margin-top: 20px;
+}
+
+.form-signin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    & input {
+        border: 1px solid #000;
+        height: 30px;
+        width: 250px;
+        margin-bottom: 20px;
+    }
+}
+.form-signin-heading {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 600;
 }
