--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,44 +9,23 @@ $maxWidth: 1280;
     font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
 }
 
+.box {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+}
 .wrapper {
+    position: relative;
     width: 400px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    margin: 50px auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    height: 400px;
+    border: 3px solid red;
 }
-
 button {
-    margin-bottom: 20px;
-    width: 250px;
-    height: 30px;
-    border-radius: 8px;
-    background-color: rgb(112, 161, 200);
-    color: white;
-}
-
-[type="checkbox"] {
-    margin-top: 20px;
-}
-
-.form-signin {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    & input {
-        border: 1px solid #000;
-        height: 30px;
-        width: 250px;
-        margin-bottom: 20px;
-    }
-}
-.form-signin-heading {
-    margin-bottom: 20px;
-    font-size: 20px;
-    font-weight: 600;
-    text-transform: uppercase;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width: 100px;
+    height: 40px;
+    background-color: yellow;
+    border: none;
 }
